data/derived/comb/progs/unify/prog2488.ml.out
Characters 75-97:
  | n -> ((digitsOfInt (n / 10))::(n mod 10));;
          ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
